scripts/style.css
body {
	color: #000;
	font-family: 'Noto Sans', sans-serif;
	text-align: center;
	}
	
	h1, h2 {
		text-align: left
		font-family: 'Noto Sans' sans-serif;
		}
		
	p.equation {
		display: inline-block;
		text-align: center;
		font-family: 'Fira Mono', monospace;
		}
	p.equation .hover:first-of-type .display-bubble {
		transform: translate(-40%, -100%);
	}

.hover {
	position: relative;
	cursor: pointer;
	color: #000;
	font-weight: bold;
	text-decoration: none;
}

.hover:hover {
	color: #9CAF88;
	}
	
.display-bubble {
	position: absolute;
	background: #fff;
	color: #222;
	padding: 6px 8px;
	border: 1px solid #000;
	border-radius: 0;
	width: 200px;
	font-size: 0.85em;
	z-index: 100;
	top: -20px;
	left: 50%;
	transform: translate(-50%, -100%);
}

.display-bubble::after {
	content: '';
	position: absolute;
	width: 1px;
	height: 16px;
	background: #000;
	bottom: -16px;
	left: 50%;
	transform: translateX(-50%);
	}

